--- a/base.css
+++ b/base.css
@@ -1,6 +1,7 @@
 * {
   margin: 0;
   padding: 0;
+  box-sizing: border-box;
 }
 
 :root {
@@ -15,7 +16,6 @@ body {
   letter-spacing: -0.02em;
   font-size: 14px;
   color: var(--black);
-  padding: 20px;
   background-color: var(--white);
 }
 
@@ -27,4 +27,9 @@ a {
 ul,
 ol {
   list-style: none;
+}
+
+button {
+  border: none;
+  font-family: inherit;
 }
