--- a/styles.css
+++ b/styles.css
@@ -4,8 +4,7 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  margin-bottom: 14px;
-  padding: 20px;
+  padding: 20px 20px 14px 20px;
 }
 .logo {
   font-weight: 700;
