--- a/styles.css
+++ b/styles.css
@@ -155,7 +155,7 @@
   text-align: center;
   max-width: 283px;
 }
-.ingredients-section-title-word {
+.other-title-word {
   color: var(--orange);
 }
 .ingredients-section-text {
@@ -265,4 +265,21 @@
 
 .ingredients-item:hover .overlay {
   transform: translateX(0);
+}
+
+/* ------How it's made section  ------  */
+.how-made-section {
+}
+.how-made-section-title {
+  font-weight: 600;
+  font-size: 20px;
+  line-height: 120%;
+  letter-spacing: -0.03em;
+  text-transform: uppercase;
+  text-align: center;
+}
+
+.svg {
+  fill: black;
+  stroke: black;
 }
